Closed
Bug 1668661
Opened 5 years ago
Closed 5 years ago
Unship Intel gen6 GT2
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jrmuizel, Assigned: jrmuizel)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
It turns out we haven't shipped to older intel generations because our driver block list accidentally blocked them. To reduce risk in 82 let's turn Gen6 back off.
Updated•5 years ago
|
Blocks: gfx-82
Severity: -- → S1
status-firefox81:
--- → disabled
status-firefox82:
--- → affected
OS: Unspecified → Windows
Hardware: Unspecified → Desktop
Updated•5 years ago
|
Assignee: nobody → jmuizelaar
| Assignee | ||
Comment 1•5 years ago
|
||
We accidentally didn't let later generations ride
so lets remain a bit conservative and not let gen6 ride
until 83
| Assignee | ||
Comment 2•5 years ago
|
||
Comment on attachment 9179154 [details]
Bug 1668661. Don't let Intel gen6 ride the trains.
Beta/Release Uplift Approval Request
- User impact if declined: WebRender will ship on gen6 when we don't want it to
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This patch just reduces risk. Not taking it is higher risk. It does not need to land on Nightly
- String changes made/needed:
Attachment #9179154 -
Flags: approval-mozilla-beta?
Comment 3•5 years ago
|
||
Comment on attachment 9179154 [details]
Bug 1668661. Don't let Intel gen6 ride the trains.
approved for 82.0b7
Attachment #9179154 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 4•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•