Bug 1668661. Don't let Intel gen6 ride the trains. r=aosmond, a=jcristau

We accidentally didn't let later generations ride
so lets remain a bit conservative and not let gen6 ride
until 83

Differential Revision: https://phabricator.services.mozilla.com/D92166